# BYOKEY

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  README_CN.md  appcast.xml
.cargo/: audit.toml
.github/workflows/: ci.yml
crates/auth/: CHANGELOG.md
crates/auth/src/: callback.rs  lib.rs  manager.rs  pkce.rs  token.rs
crates/auth/src/flow/: auth_code.rs  device_code.rs  mod.rs
crates/auth/src/provider/: amp.rs  antigravity.rs  claude.rs  codex.rs  copilot.rs  gemini.rs  iflow.rs  kimi.rs  kiro.rs  mod.rs  qwen.rs
crates/daemon/: CHANGELOG.md
crates/provider/: CHANGELOG.md
crates/provider/src/: factory.rs  http_util.rs  kimi.rs  lib.rs  registry.rs  retry.rs
crates/provider/src/executor/: antigravity.rs  claude.rs  codex.rs  codex_ws.rs  copilot.rs  gemini.rs  iflow.rs  kimi.rs  kiro.rs  mod.rs  qwen.rs
crates/proxy/: CHANGELOG.md  Cargo.toml
crates/proxy/src/: error.rs  lib.rs  openapi.rs  router.rs  usage.rs
crates/proxy/src/handler/: accounts.rs  amp.rs  amp_provider.rs  amp_quota.rs  amp_threads.rs  chat.rs  messages.rs  mod.rs  models.rs  ratelimits.rs  status.rs  usage.rs
crates/store/: CHANGELOG.md  Cargo.toml
crates/store/src/: lib.rs  memory.rs
crates/store/src/entity/: account.rs  conversation.rs  message.rs  mod.rs
crates/store/src/persistent/: history.rs  mod.rs  token.rs  usage.rs
crates/translate/: CHANGELOG.md
crates/translate/src/: cache_control.rs  claude_to_openai.rs  codex_to_openai.rs  gemini_to_openai.rs  lib.rs  openai_to_claude.rs  openai_to_codex.rs  openai_to_gemini.rs  thinking.rs
crates/types/: CHANGELOG.md  Cargo.toml
crates/types/src/: amp_quota.rs  error.rs  lib.rs  provider.rs  token.rs  traits.rs
desktop/Byokey/: openapi.json
desktop/Byokey.xcodeproj/: project.pbxproj
desktop/Byokey/App/: AppEnvironment.swift  ByokeyApp.swift
desktop/Byokey/Services/: CLIRunner.swift  ConfigManager.swift  DataService.swift  ProcessManager.swift  TypeAliases.swift
desktop/Byokey/Views/: AccountsView.swift  AmpView.swift  ContentView.swift  GeneralView.swift  ModelsView.swift  SettingsView.swift  UsageView.swift
desktop/Byokey/Views/Dashboard/: DashboardActivityCard.swift  DashboardHistoryChart.swift  DashboardRateLimitsCard.swift  DashboardStatsRow.swift
desktop/LaunchDaemons/: io.byokey.desktop.daemon.plist
src/: auth.rs  main.rs
src/amp/: bundle.rs  mod.rs
