[package]
name = "byokey-proxy"
version.workspace = true
edition.workspace = true
authors.workspace    = true
description.workspace = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[lints]
workspace = true

[dependencies]
byokey-types = { workspace = true, features = ["rquest"] }
byokey-config.workspace = true
byokey-auth.workspace = true
byokey-provider.workspace = true
byokey-translate.workspace = true
byokey-store.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
rquest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures-util.workspace = true
bytes.workspace = true
arc-swap.workspace = true
notify.workspace = true
tracing.workspace = true
utoipa.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
