[package]
name = "byokey-store"
version.workspace = true
edition.workspace = true
authors.workspace    = true
description.workspace = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[lints]
workspace = true

[dependencies]
byokey-types = { workspace = true, features = ["sea-orm"] }
sea-orm.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
