[package]
name = "byokey-types"
version.workspace = true
edition.workspace = true
authors.workspace    = true
description.workspace = true
license.workspace    = true
repository.workspace = true
homepage.workspace   = true

[lints]
workspace = true

[features]
rquest = ["dep:rquest"]
sqlx = ["dep:sqlx"]
sea-orm = ["dep:sea-orm"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
async-trait.workspace = true
futures-core.workspace = true
bytes.workspace = true
utoipa.workspace = true

# Optional — enable `From<rquest::Error>` / `From<sqlx::Error>` / `From<sea_orm::DbErr>` for `ByokError`.
rquest = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
